[gd_scene load_steps=2 format=3 uid="uid://cn6wcv1ry4sg0"]

[ext_resource type="Script" uid="uid://56ltjkcpxmfr" path="res://ui.gd" id="1_fyqef"]

[node name="UI" type="Control"]
custom_minimum_size = Vector2(1024, 512)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fyqef")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.6431373, 1, 0.38431373)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 658.0
offset_bottom = 380.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="SetPermissions" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Request BT Permissions"

[node name="StartScan" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Start Scan"

[node name="StopScan" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Stop Scan"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Revs" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2

[node name="LastTime" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2

[node name="RPM" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="RevsLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "revs"

[node name="LastTimeLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "last"

[node name="RPMLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "RPM"

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Devices Found"
horizontal_alignment = 1

[node name="DeviceList" type="ItemList" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
auto_width = true
auto_height = true
wraparound_items = false

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/SetPermissions" to="." method="_on_set_permissions_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartScan" to="." method="_on_start_scan_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StopScan" to="." method="_on_stop_scan_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer2/DeviceList" to="." method="_on_device_list_item_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
